--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@webpack-cli/init": "^1.0.3",
+    "aframe": "^1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
