--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@webpack-cli/init": "^1.0.3",
     "aframe": "^1.1.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
