--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
     "presets": [
-        "@babel/preset-modules",
-        "@babel/preset-react"
+        "@babel/preset-env",
+        "@babel/preset-react",
+    ],
+    "plugins":[
+        "@babel/plugin-proposal-class-properties"
     ]
 }
