--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-modules": "^0.1.4",
     "@babel/preset-react": "^7.12.10",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@storybook/addon-actions": "^6.1.15",
     "@storybook/addon-essentials": "^6.1.15",
     "@storybook/addon-links": "^6.1.15",
