--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,11 @@
 # DO NOT REMOVE THIS LINE AND THE LINES BELLOW SSL_REDIRECT:madebynel.com
-RewriteEngine on
-RewriteCond %{HTTPS} off
-RewriteCond %{HTTP_HOST} (www\.)?madebynel.com/dist/
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+<IfModule mod_reqrite.c>
+    RewriteEngine on
+    RewriteBase /
+    RewriteRule ^index\.html$ - [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-l
+    RewriteRule ^index\.html - [L]
+</IfModule>
 # DO NOT REMOVE THIS LINE AND THE LINES BELLOW SSL_REDIRECT:madebynel.com
